Update Cargo.toml and README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "sysmon"
 version = "0.1.0"
 edition = "2024"
+authors = ["The Doctor", "thedoctor095@yahoo.com"]
+readme = "README.md"
+repository = "https://github.com/thedoctor095/sysmon-rs"
+license-file = "LICENSE"
 
 [dependencies]
 anyhow = "1.0.98"
